--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,9 @@
 <% provide(:title, 'Contact Us') %>
 
 <h1>Contact Us</h1>
+
+	<p>Fuck Yeahh</p>
+	
 	<p>
 	  Get help on the Ruby on Rails Tutorial at the
 		  <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
